--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="box">
-        <h1>tm co dieu nay muon noi…</h1>
+        <h1>tm co dieu nay muon noiâ€¦</h1>
         <p>em co muon lam ngiu tm khong?</p>
         <button onclick="yes()">dong y</button>
         <button id="no">khong</button>
@@ -15,3 +15,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
